# ecto_libsql

./: .credo.exs  .dialyzer_ignore.exs  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY_TEST_FIXES.md  Cargo.toml  Cross.toml  ECTO_SQLITE3_COMPATIBILITY_TESTING.md  ENHANCEMENTS.md  FORMATTING_VERIFICATION_REPORT.md  IMPLEMENTATION_ROADMAP_FOCUSED.md  LIBSQL_FEATURE_MATRIX_FINAL.md  POOL_LOAD_TEST_IMPROVEMENTS.md  README.md  RELEASE_PROCESS.md  RESILIENCE_IMPROVEMENTS.md  RUST_ERROR_HANDLING.md  Rust-async-aware-mutex-types.md  SECURITY.md  SESSION_ENHANCEMENT_SUMMARY.md  TESTING.md  TESTING_PLAN_COMPREHENSIVE.md  TEST_AUDIT_REPORT.md  TEST_COVERAGE_ISSUES_CREATED.md  TURSO_COMPREHENSIVE_GAP_ANALYSIS.md  TURSO_FEATURE_GAP_ANALYSIS.md  TURSO_GAP_ANALYSIS_UPDATED.md  TURSO_IMPLEMENTATION_ROADMAP.md  TYPE_ENCODING_SUMMARY.md  USAGE.md  checksum-Elixir.EctoLibSql.Native.exs  mise.toml  mix.exs
.beads/: .gitignore  .migration-hint-ts  config.yaml  issues-export.jsonl  issues.jsonl  issues_to_create.md  last-touched  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  issues.jsonl  labels.jsonl
.claude/: settings.local.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
examples/: ecto_example.exs
lib/: ecto_libsql.ex  libsqlex.ex
lib/ecto/adapters/: ecto_libsql.ex  libsql.ex  libsqlex.ex
lib/ecto_libsql/: error.ex  json.ex  native.ex  pragma.ex  query.ex  result.ex  state.ex
lib/libsqlex/: error.ex  native.ex  query.ex  state.ex
native/ecto_libsql/: Cargo.toml  FUZZING.md  README.md  deny.toml
native/ecto_libsql/.cargo/: config.toml
native/ecto_libsql/fuzz/: Cargo.toml
native/ecto_libsql/fuzz/fuzz_targets/: fuzz_detect_query_type.rs  fuzz_should_use_query.rs  fuzz_sql_structured.rs
native/ecto_libsql/src/: batch.rs  connection.rs  constants.rs  cursor.rs  decode.rs  hooks.rs  lib.rs  metadata.rs  models.rs  query.rs  replication.rs  savepoint.rs  statement.rs  tests.rs  transaction.rs  utils.rs
native/ecto_libsql/src/tests/: constants_tests.rs  error_handling_tests.rs  integration_tests.rs  mod.rs  proptest_tests.rs  test_utils.rs  utils_tests.rs
native/libsqlex/: Cargo.toml
test/: advanced_features_test.exs  batch_features_test.exs  connection_features_test.exs  connection_recovery_test.exs  cte_test.exs  cursor_streaming_large_test.exs  ecto_adapter_test.exs  ecto_connection_test.exs  ecto_datetime_usec_test.exs  ecto_integration_test.exs  ecto_libsql_query_encoding_test.exs  ecto_libsql_test.exs  ecto_migration_test.exs  ecto_returning_shared_schema_test.exs  ecto_returning_test.exs  ecto_sql_compatibility_test.exs  ecto_sql_transaction_compat_test.exs  ecto_sqlite3_blob_compat_test.exs  ecto_sqlite3_crud_compat_fixed_test.exs  ecto_sqlite3_crud_compat_test.exs  ecto_sqlite3_json_compat_test.exs  ecto_sqlite3_returning_debug_test.exs  ecto_sqlite3_timestamps_compat_test.exs  ecto_stream_compat_test.exs  error_demo_test.exs  error_handling_test.exs  exists_query_test.exs  explain_query_test.exs  explain_simple_test.exs  fuzz_test.exs  hooks_test.exs  in_expression_comprehensive_test.exs  issue_63_in_clause_test.exs  json_helpers_test.exs  libsqlex_test.exs  manual_delete_get_test.exs  named_parameters_execution_test.exs  pool_load_test.exs  pragma_test.exs  prepared_statement_test.exs  (+20 more)
test/support/: case.ex  migration.ex  repo.ex
(+9 files in other folders)
