[package]
name = "ecto_libsql"
version = "0.4.0"
authors = []
edition = "2021"

[lib]
name = "ecto_libsql"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
libsql = { version = "0.9.24", features = ["encryption"] }
once_cell = "1.21.3"
rustler = "0.37.0"
tokio = "1.45.1"
uuid = "1.17.0"
bytes = "1.5"
