[package]
name = "ecto_libsql"
version = "0.8.1"
authors = []
edition = "2021"
description = "Rust NIF (Native Implemented Function) for EctoLibSql - High-performance Ecto adapter for LibSQL/Turso databases"
license = "Apache-2.0"
repository = "https://github.com/ocean/ecto_libsql"
keywords = ["ecto", "libsql", "turso", "sqlite", "database"]
categories = ["database", "api-bindings"]

[lib]
name = "ecto_libsql"
# cdylib for NIF use, rlib for Rust testing/fuzzing
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.5.0"
libsql = { version = "0.9.29", features = ["encryption", "replication"] }
once_cell = "1.21.3"
rustler = "0.37.0"
tokio = "1.45.1"
uuid = "1.17.0"
bytes = "1.5"
