[package]
name = "ecto_libsql"
version = "0.8.9"
authors = []
edition = "2021"
description = "Rust NIF (Native Implemented Function) for EctoLibSql - High-performance Ecto adapter for LibSQL/Turso databases"
license = "Apache-2.0"
repository = "https://github.com/ocean/ecto_libsql"
keywords = ["ecto", "libsql", "turso", "sqlite", "database"]
categories = ["database", "api-bindings"]

[lib]
name = "ecto_libsql"
# cdylib for NIF use, rlib for Rust testing/fuzzing
crate-type = ["cdylib", "rlib"]

[dependencies]
libsql = { version = "0.9.29", features = ["encryption", "replication"] }
rustler = { version = "0.37.0", default-features = false, features = ["derive", "nif_version_2_15"] }
tokio = "1.45.1"
uuid = "1.17.0"
bytes = "1.5"

[dev-dependencies]
proptest = "1.5"

# Lint configuration - enforces code quality standards
[lints.rust]
# Deny all warnings in CI
unsafe_code = "deny"

[lints.clippy]
# Warn on unwrap/expect - test code may use unwrap() per CLAUDE.md guidelines
# Production code has been cleaned to use safe error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Warn on style and best practices (subset of pedantic that are reasonable)
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
uninlined_format_args = "warn"
